--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate=INFO
-
-spring.output.ansi.enabled=always
-
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+server.port=4000
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://${DB_HOST}:${DB_PORT}/testdb?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://${DB_HOST}:${DB_PORT}/board?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=110MB
+
+secret-key=S3cr3tK3yS3cr3tK3yS3cr3tK3yS3cr3tK3y
+
+file.path=C:/fileUpload/
+file.url=http://localhost:4000/file/
