--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.servlet.multipart.max-request-size=110MB
 
 secret-key=S3cr3tK3yS3cr3tK3yS3cr3tK3yS3cr3tK3y
 
-file.path=C:/fileUpload/
-file.url=http://localhost:4000/file/
+file.path=./fileUpload/
+file.url=${DOMAIN}/file/
