--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,14 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://${DB_HOST}:${DB_PORT}/board?characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mariadb://svc.sel5.cloudtype.app:31240/board?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=110MB
 
 secret-key=S3cr3tK3yS3cr3tK3yS3cr3tK3yS3cr3tK3y
 
-file.path=./fileUpload/
-file.url=${DOMAIN}/file/
+file.path=C:/
+file.url=https://port-0-re-board-backend-dj712lls94umja.sel5.cloudtype.app/file/
