--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,6 @@ spring.servlet.multipart.max-request-size=110MB
 
 secret-key=S3cr3tK3yS3cr3tK3yS3cr3tK3yS3cr3tK3y
 
-file.path=C:/
+spring.resources.static-locations=classpath:/static/fileUpload/
+
 file.url=https://port-0-re-board-backend-dj712lls94umja.sel5.cloudtype.app/file/
